--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 	</div>		
 
 <div class="overlay">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deleniti ea id ipsum molestiae, nam nihil nulla, praesentium quidem, reprehenderit sed voluptatem. Aspernatur ducimus ex ipsam laborum pariatur quaerat tempora.</div>
+    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium architecto culpa error explicabo fugit iusto perspiciatis quasi quia veniam. Distinctio eaque eos,
+        laboriosam nostrum obcaecati optio perspiciatis saepe sequi!
+    </div>
+    <div>Asperiores facere id, maxime nihil nulla omnis rerum. Animi aperiam assumenda cupiditate dicta dignissimos eos expedita fugiat in labore, minima nemo odit officia
+        perspiciatis, quam quasi quisquam veritatis? At, dolor?
+    </div>
 <div class="popup text-center">
 <div class="close-btn">&times;</div>
 	<h4>Купите <span class="fruit-name">фрукт!</span></h4>
